#ifndef BRIDGEDEMO_ITYPETRANSPORTATION_H
#define BRIDGEDEMO_ITYPETRANSPORTATION_H


class ITypeTransportation {
public:
    virtual void Loading() = 0;
    virtual void Unloading() = 0;
};


#endif //BRIDGEDEMO_ITYPETRANSPORTATION_H
